# l

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  scratch_test.py
apps/api/: Dockerfile  alembic.ini  create_live_project_key.py  pyproject.toml  scratch_test.py  tests_output.txt  ws_test_delay.py
apps/api/app/: config.py  database.py  exceptions.py  main.py  redis_client.py
apps/api/app/middleware/: auth.py  cors.py  logging.py
apps/api/app/models/: __init__.py  api_key.py  org.py  project.py  span.py  trace.py  user.py
apps/api/app/routers/: api_keys.py  health.py  ingest.py  orgs.py  traces.py  ws.py
apps/api/app/schemas/: ingest.py  orgs.py  traces.py
apps/api/app/services/: api_keys.py  ingest.py  traces.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py
apps/api/tests/integration/: test_integration.py
apps/api/tests/property/: test_auth_properties.py  test_ingest_properties.py  test_query_properties.py  test_serialization_props.py
apps/api/tests/smoke/: test_schema.py
apps/api/tests/unit/: test_api_keys.py  test_ingest.py  test_traces.py
apps/web/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx
apps/web/app/dashboard/: DashboardClient.tsx  page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
